--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.18",
     "aos": "^2.3.4",
     "emailjs": "^4.0.3",
+    "firebase": "^10.14.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.3",
     "react": "18.2.0",
